--- a/clase-introductoria/index.html
+++ b/clase-introductoria/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Bienvenido a React - Comisión 49870</h1>
     <div id="root">
-        
+        Todo lo que yo cree con JavaScript va a venir acá
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
